--- a/ax.css
+++ b/ax.css
@@ -6,7 +6,7 @@ color: #fff;
 font-family: "Inconsolata", monospace;
 
 font-weight: bold;
-background-image: url(/img/backimg.png);
+background-image: url(img/backimg.png);
 background-size:contain  ;
 
 }
