--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body{
   text-transform: capitalize;
   color: #fff;
   background-color: #000000;
-  background-image: url(/img/backimg.png);
+  background-image: url(img/backimg.png);
   background-size:contain  ;
 
   font-family: "Inconsolata", monospace;  
